# Prueba-TPs-SOI

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/actions/valgrind_check/: action.yml
.github/workflows/: QAWorkflow.yml
hub/: CMakeLists.txt
hub/include/: authentication.h  hub.h  listener.h  orders.h
hub/src/: authentication.c  hub.c  listener.c  main.c  orders.c
hub/tests/: CMakeLists.txt  authentication_test.c  hub_test.c  listener_test.c  orders_test.c
server/: CMakeLists.txt  README.md
server/include/: authentication.hpp  database.hpp  inventory.hpp  log.hpp  orders.hpp  request_router.hpp  sender.hpp  server.hpp
server/init/: init_postgres.sql
server/src/: authentication.cpp  database.cpp  inventory.cpp  log.cpp  main.cpp  orders.cpp  request_router.cpp  sender.cpp  server.cpp
server/tests/: CMakeLists.txt  authentication_test.cpp  database_test.cpp  inventory_test.cpp  log_test.cpp  orders_test.cpp  request_router_test.cpp  sender_test.cpp  server_test.cpp
warehouse/: CMakeLists.txt
warehouse/include/: authentication.h  inventory.h  listener.h  orders.h  warehouse.h
warehouse/src/: authentication.c  inventory.c  listener.c  main.c  orders.c  warehouse.c
warehouse/tests/: CMakeLists.txt  authentication_test.c  inventory_test.c  listener_test.c  main.c  orders_test.c  warehouse_test.c
